--- a/footer.html
+++ b/footer.html
@@ -13,14 +13,18 @@
     <footer>
       <div class="top">
         <div class="left_row size list_style">
+          <img src="./imagess/logo-removebg-preview.png" alt="" srcset="">
           <h1>Jersery Store Nepal</h1>
           <li>
             We make customized jersery with printing services as per your need
           </li>
-        
-          <div class="box1"><img src="./imagess/facebook.png" alt="" srcset="">
-          <img src="./imagess/whatsapp.png" alt="" srcset="">
-        <a href=""></a><img src="./imagess/instagram.png" alt="" srcset=""></div>
+
+          <div class="box1">
+            <img src="./imagess/facebook.png" alt="" srcset="" />
+            <img src="./imagess/whatsapp.png" alt="" srcset="" />
+            <a href=""></a
+            ><img src="./imagess/instagram.png" alt="" srcset="" />
+          </div>
         </div>
         <div class="middle_row size">
           <h1>Our Product</h1>
@@ -41,11 +45,10 @@
           </ul>
         </div>
       </div>
-<hr>
+      <hr />
       <div class="bottom_fotter ">
-    
-        <p>Copyright &copy 2023</p>
-        <p>Jersery Store Nepal| Jersery Make And Print</p>
+        <p1>Copyright &copy 2023</p1>
+        <p1>Jersery Store Nepal| Jersery Make And Print</p1>
       </div>
     </footer>
   </body>
